HW3 modification