@@ -5,4 +5,4 @@ javac -cp "C:\Cache" -d "C:\Cache" -sourcepath "..\tests\java;../;." "queue/Arra
 javac -cp "C:\Cache" -d "C:\Cache" -sourcepath "..\tests\java;../;." "queue/ArrayQueueADT.java"
 javac -cp "C:\Cache" -d "C:\Cache" -sourcepath "..\tests\java;../;." "queue/ArrayQueue.java"
 javac -cp "C:\Cache" -d "C:\Cache" -sourcepath "..\tests\java;../;." "..\tests\java\queue\ArrayQueueTest.java"
-java -cp "C:\Cache" -ea queue.ArrayQueueTest DequeIndex
+java -cp "C:\Cache" -ea --add-opens java.base/java.util=ALL-UNNAMED queue.ArrayQueueTest DequeIndex
